--- a/app/src/main/res/drawable/white_round_border.xml
+++ b/app/src/main/res/drawable/white_round_border.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="50dp"/>
-    <stroke android:width="3dp" android:color="#1C1D3A"/>
+    <stroke android:width="3dp" android:color="#F8F8F7"/>
 </shape>
