--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -36,10 +36,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress3"
+        android:id="@+id/emailText"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:background="@drawable/blue_round_border"
         android:ems="10"
         android:hint="Email"
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editTextTextPassword5"
+        android:id="@+id/passwordText"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
@@ -65,13 +65,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />
+        app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
     <com.ncorti.slidetoact.SlideToActView
         android:id="@+id/swipeSIstd"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:elevation="6dp"
         app:animation_duration="250"
         app:area_margin="8dp"
@@ -81,11 +81,45 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword5"
+        app:layout_constraintTop_toBottomOf="@+id/passwordText"
         app:outer_color="#1C1D3A"
         app:slider_height="60dp"
         app:slider_locked="false"
         app:text="Sign In"
         app:text_size="20dp"
         app:text_style="bold" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/googleSignIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/googleSignIn" />
+
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/googleSignIn"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:elevation="6dp"
+        app:animation_duration="250"
+        app:area_margin="8dp"
+        app:border_radius="50dp"
+        app:icon_margin="8dp"
+        app:inner_color="#F8F8F7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swipeSIstd"
+        app:outer_color="#1C1D3A"
+        app:slider_height="60dp"
+        app:slider_icon="@drawable/google"
+        app:slider_locked="false"
+        app:text="Sign In With Google"
+        app:text_size="20dp"
+        app:text_style="bold" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
