--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,6 +7,39 @@
     android:background="#F8F8F7"
     tools:context=".sign_up">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/googleSignUp"
+        app:layout_constraintEnd_toEndOf="@+id/googleSignUp"
+        app:layout_constraintStart_toStartOf="@+id/googleSignUp"
+        app:layout_constraintTop_toTopOf="@+id/googleSignUp" />
+
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/googleSignUp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:elevation="6dp"
+        app:animation_duration="250"
+        app:area_margin="8dp"
+        app:border_radius="50dp"
+        app:icon_margin="8dp"
+        app:inner_color="#F8F8F7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/swipeSU"
+        app:outer_color="#1C1D3A"
+        app:slider_height="60dp"
+        app:slider_icon="@drawable/google"
+        app:slider_locked="false"
+        app:text="Sign In With Google"
+        app:text_size="20dp"
+        app:text_style="bold" />
+
     <ImageView
         android:id="@+id/backToStartBtn"
         android:layout_width="wrap_content"
@@ -36,7 +69,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/emailOrg"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="60dp"
@@ -51,7 +84,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/passwordSU"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
@@ -63,10 +96,10 @@
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/emailOrg" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/confPasswordSU"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="30dp"
@@ -78,7 +111,7 @@
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordSU" />
 
     <TextView
         android:id="@+id/textView3"
@@ -120,7 +153,7 @@
         app:inner_color="#F8F8F7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/confPasswordSU"
         app:outer_color="#1C1D3A"
         app:slider_height="60dp"
         app:slider_locked="false"
