--- a/app/src/main/res/layout/activity_organizer_page.xml
+++ b/app/src/main/res/layout/activity_organizer_page.xml
@@ -29,6 +29,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_profile"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/userEmailAdd" />
+
         <ImageView
             android:id="@+id/profileUpload"
             android:layout_width="150dp"
@@ -58,19 +68,21 @@
 
         <Button
             android:id="@+id/logOut"
-            android:layout_width="300dp"
+            android:layout_width="100dp"
             android:layout_height="60dp"
-            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/white_round_border"
             android:fontFamily="@font/montserrat"
             android:onClick="logOut"
             android:text="Log out"
             android:textColor="#1C1D3A"
-            android:textSize="20sp"
+            android:textSize="12sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.948"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
