--- a/app/src/main/res/layout/activity_new_organizer.xml
+++ b/app/src/main/res/layout/activity_new_organizer.xml
@@ -8,16 +8,17 @@
     tools:context=".new_organizer">
 
     <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:id="@+id/imageView7"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:clickable="true"
         android:onClick="backToHome"
-        app:layout_constraintStart_toStartOf="parent"
+        android:rotation="45"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_btn_white" />
+        app:srcCompat="@drawable/new_post" />
 
     <Button
         android:id="@+id/button2"
@@ -29,7 +30,7 @@
         android:text="Add new organizer"
         android:textAllCaps="false"
         android:textColor="#1C1D3A"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:backgroundTint="#ECECEC"
         app:cornerRadius="50dp"
@@ -53,8 +54,9 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#F8F8F7"
-        android:textColorHint="@color/browser_actions_bg_grey"
+        android:textColor="#ECF1F4"
+        android:textColorHint="#F3F1EB"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +74,9 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#F8F8F7"
-        android:textColorHint="@color/browser_actions_bg_grey"
+        android:textColor="#ECF1F4"
+        android:textColorHint="#F3F1EB"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,8 +94,9 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#F8F8F7"
-        android:textColorHint="@color/browser_actions_bg_grey"
+        android:textColor="#ECF1F4"
+        android:textColorHint="#F3F1EB"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,8 +114,9 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textColor="#F8F8F7"
-        android:textColorHint="@color/browser_actions_bg_grey"
+        android:textColor="#ECF1F4"
+        android:textColorHint="#F3F1EB"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +130,7 @@
         android:fontFamily="@font/montserrat"
         android:text="ADD NEW ORGANIZER"
         android:textColor="#ECECEC"
-        android:textSize="28sp"
+        android:textSize="19sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
