--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,8 @@
         <item>@font/</item>
         <item>@font/aldrich</item>
         <item>@font/comfortaa</item>
+        <item>@font/lato</item>
+        <item>@font/lato_italic</item>
         <item>@font/montserrat</item>
         <item>@font/montserrat_subrayada</item>
     </array>
