--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -54,8 +54,9 @@
             android:onClick="logOut"
             android:text="Log out"
             android:textColor="#1C1D3A"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold"
+            app:backgroundTint="#ECECEC"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -71,28 +72,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
+        <EditText
             android:id="@+id/textInputLayout"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/total_white"
+            android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="Search event ..."
+            android:inputType="textPersonName"
+            android:paddingLeft="80dp"
+            android:paddingRight="80dp"
+            android:textColor="#1C1D3A"
+            android:textColorHint="#8C8CA1"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/total_white"
-                android:fontFamily="@font/montserrat"
-                android:hint="Search events..."
-                android:paddingStart="80dp"
-                android:paddingEnd="80dp"
-                android:textColorHint="#1C1D3A"
-                android:textSize="20dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageLeft"
@@ -119,7 +116,6 @@
             android:id="@+id/recycler_view_search"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
