--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -7,11 +7,26 @@
     android:background="#1C1D3A"
     tools:context=".event_details">
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:clickable="true"
+        android:onClick="backToHome"
+        android:rotation="45"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/new_post" />
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -38,7 +53,7 @@
                 android:gravity="center"
                 android:text="Event Name"
                 android:textColor="#ECECEC"
-                android:textSize="28sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +80,7 @@
                     android:text="Event description some gaanchali stuff Event description some gaanchali stuff Event description some gaanchali stuff Event description some gaanchali stuff Event description some gaanchali stuff Event description some gaanchali stuff "
                     android:textAlignment="center"
                     android:textColor="#ECF1F4"
-                    android:textSize="18sp" />
+                    android:textSize="15sp" />
             </ScrollView>
 
             <TextView
@@ -77,7 +92,7 @@
                 android:paddingStart="30dp"
                 android:text="Date:"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +109,7 @@
                 android:paddingEnd="30dp"
                 android:text="20-23 January 2020"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/descriptionEvent" />
 
@@ -107,7 +122,7 @@
                 android:paddingStart="30dp"
                 android:text="College:"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -125,7 +140,7 @@
                 android:paddingEnd="30dp"
                 android:text="College Name"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
@@ -138,7 +153,7 @@
                 android:paddingStart="30dp"
                 android:text="Category:"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -156,43 +171,31 @@
                 android:paddingEnd="30dp"
                 android:text="Category"
                 android:textColor="#ECF1F4"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="300dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="50dp"
-                android:fontFamily="@font/montserrat"
-                android:onClick="openLink"
-                android:text="Register"
-                android:textAllCaps="false"
-                android:textColor="#1C1D3A"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:backgroundTint="#ECECEC"
-                app:cornerRadius="50dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView18"
-                app:strokeColor="#F8F8F7"
-                app:strokeWidth="3dp" />
-
-            <ImageView
-                android:id="@+id/imageView17"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:onClick="backToHome"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/back_btn_white" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="30dp"
+        android:fontFamily="@font/montserrat"
+        android:onClick="openLink"
+        android:text="Register"
+        android:textAllCaps="false"
+        android:textColor="#1C1D3A"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:backgroundTint="#ECECEC"
+        app:cornerRadius="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="#F8F8F7"
+        app:strokeWidth="3dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
