--- a/app/src/main/res/layout/activity_select_filter.xml
+++ b/app/src/main/res/layout/activity_select_filter.xml
@@ -26,14 +26,15 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/total_blue"
             android:fontFamily="@font/montserrat"
+            android:gravity="center_vertical"
             android:hint="College"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
-            android:textColor="#F8F8F7"
-            android:textColorHint="#F8F8F7"
-            android:textSize="18sp"
+            android:textColor="#ECF1F4"
+            android:textColorHint="#F3F1EB"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup"
@@ -57,14 +58,15 @@
             android:layout_marginEnd="20dp"
             android:background="@drawable/total_blue"
             android:fontFamily="@font/montserrat"
+            android:gravity="center_vertical"
             android:hint="Category"
             android:paddingLeft="20dp"
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
-            android:textColor="#F8F8F7"
-            android:textColorHint="#F8F8F7"
-            android:textSize="18sp"
+            android:textColor="#ECF1F4"
+            android:textColorHint="#F3F1EB"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
+            android:clickable="true"
+            android:onClick="applyFilter"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,10 +96,9 @@
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="25dp"
+                android:layout_height="36dp"
                 android:foregroundGravity="center_horizontal"
-                android:onClick="applyFilter"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/apply" />
@@ -110,7 +113,7 @@
                 android:gravity="center_vertical"
                 android:text="Apply"
                 android:textColor="#1C1D3A"
-                android:textSize="20sp"
+                android:textSize="19sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imageView16"
                 app:layout_constraintStart_toEndOf="@+id/imageView16"
@@ -132,7 +135,8 @@
                 android:layout_marginTop="60dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Today"
-                android:textSize="20sp"
+                android:textColor="#1C1D3A"
+                android:textSize="15sp"
                 app:buttonTint="#1C1D3A" />
 
             <RadioButton
@@ -143,7 +147,8 @@
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/montserrat"
                 android:text="This week"
-                android:textSize="20sp"
+                android:textColor="#1C1D3A"
+                android:textSize="15sp"
                 app:buttonTint="#1C1D3A" />
 
         </RadioGroup>
@@ -158,24 +163,29 @@
         android:background="@drawable/total_white"
         android:fontFamily="@font/montserrat"
         android:gravity="center_horizontal|center_vertical"
-        android:hint="Select filters"
+        android:hint="Select filters ..."
         android:paddingLeft="60dp"
         android:paddingEnd="60dp"
         android:textColor="#ECECEC"
         android:textColorHint="#1C1D3A"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="32dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:src="@drawable/ic_search"
+        android:id="@+id/imageView10"
+        android:layout_width="25dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="20dp"
+        android:clickable="true"
+        android:onClick="goBack"
+        android:rotation="45"
         app:layout_constraintBottom_toBottomOf="@+id/textView9"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toTopOf="@+id/textView9" />
+        app:layout_constraintEnd_toEndOf="@+id/textView9"
+        app:layout_constraintTop_toTopOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.35"
+        app:srcCompat="@drawable/blue_plus" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
