--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:id="@+id/eventImage"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="200dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,11 +31,11 @@
             android:id="@+id/eventName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/montserrat"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/lato_italic"
             android:text="Event Name"
             android:textColor="#F8F8F7"
-            android:textSize="24sp"
+            android:textSize="21sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,12 +45,12 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="30dp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/lato"
             android:text="Date"
             android:textColor="#F8F8F7"
-            android:textSize="18sp"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/eventName" />
 
@@ -59,11 +59,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="15dp"
-            android:fontFamily="@font/montserrat"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/lato"
             android:text="Category"
             android:textColor="#F8F8F7"
-            android:textSize="18sp"
+            android:textSize="15sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/eventName" />
 
@@ -72,12 +72,12 @@
             android:layout_width="wrap_content"
             android:layout_height="31dp"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/montserrat"
+            android:fontFamily="@font/lato"
             android:text="College name"
             android:textColor="#F8F8F7"
-            android:textSize="18sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/categoryFilter" />
